# libclp

./: LICENSE.md  README.md  libclp.cabal
include/: clp.h
src/: CLP.hs
src/CLP/: Internal.chs  Internal.hsc
