name:                     libclp
author:                   Remy Goldschmidt
version:                  0.1.0
stability:                Experimental
build-type:               Simple
cabal-version:            >= 1.10
category:                 System
copyright:                2018 Remy Goldschmidt <taktoa@gmail.com>
maintainer:               taktoa@gmail.com
homepage:                 https://github.com/taktoa/libclp
bug-reports:              https://github.com/taktoa/libclp/issues
license:                  MIT
license-file:             LICENSE.md
extra-source-files:       README.md
synopsis:                 FFI bindings to the CLP library.
description:              FFI bindings to the CLP library.

source-repository head
    type:     git
    location: https://github.com/taktoa/libclp.git

library
    build-depends:        base           == 4.*
                        , transformers   == 0.5.*
                        , mtl            == 2.2.*
                        , bytestring     == 0.10.*
                        , text           == 1.2.*
                        , lens           == 4.15.*
                        , unix           == 2.7.*
                        , process        == 1.4.*
                        , data-default   == 0.7.*
                        , semigroups     == 0.18.*
                        , exceptions     == 0.8.*
                        , containers     == 0.5.*
                        , pipes          == 4.3.*
                        , prettyprinter  == 1.1.*
                        , vector         == 0.12.*
                        , deepseq        == 1.4.*
    default-language:     Haskell2010
    exposed-modules:      CLP
                        , CLP.Internal
    pkgconfig-depends:    clp
    ghc-options:          -Wall -O2 -g
                          -fno-warn-type-defaults
                          -fno-warn-unused-do-bind
                          -fno-warn-unused-imports
    ghc-prof-options:     -auto-all
    hs-source-dirs:       src
    build-tools:          c2hs

test-suite tests
    build-depends:        base   == 4.*
                        , hspec  == 2.4.*
                        , libclp
    type:                 exitcode-stdio-1.0
    default-language:     Haskell2010
    ghc-options:          -fhpc -Wall -Werror
    main-is:              src/Tests.hs
